--- a/ASP.NET-MVC/ASP.NET MVC Essentials/Homework/BitCalculator/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC/ASP.NET MVC Essentials/Homework/BitCalculator/Views/Home/Index.cshtml
@@ -1,7 +1,57 @@
-﻿@{
+﻿@model  BitCalculator.Models.CalculatorResponseModel
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-<form method="GET">
+<script>
+    function submitform() {
+        $('form').submit();
+    }
+</script>
 
-</form>
+@using (Html.BeginForm())
+{
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem
+    {
+        Text = "Exemplo1",
+        Value = "Exemplo1"
+    });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Exemplo2",
+        Value = "Exemplo2",
+        Selected = true
+    });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Exemplo3",
+        Value = "Exemplo3"
+    });
+
+    <div class="form-group">
+        Qyantity:
+        @Html.TextBox("Qyantity", 1, new { required = "required", @onchange = "submitform();" })
+    </div>
+    <div class="form-group">
+        Type:
+        @Html.DropDownList("Type", BitCalculator.Models.CalculatorRequestModel.GetListFromType(), new { required = "required", @onchange = "submitform();" })
+    </div>
+    <div class="form-group">
+        Kilo:
+        @Html.DropDownList("Kilo", BitCalculator.Models.CalculatorRequestModel.GetListFromKilo(), new { required = "required", @onchange = "submitform();" })
+    </div>
+    <div class="form-group">
+        <input type="submit" value="GO" />
+    </div>
+}
+
+<table>
+    @foreach (var item in Model.GetResult())
+    {
+        <tr>
+            @Html.Raw(item)
+        </tr>
+    }
+</table>
